﻿1.3.2 (Changes since 1.3.1) 2010-??-??

- Better looking About page
- Fix issue #1: Map lookup now only uses validated names
- A few score more database corrections and updates


1.3.1 (Changes since 1.3.0b2) 2010-09-12

- Be more conservative about returning alternate names in the results (London is no longer forced to City of Westminster)
- Back of widget now has map icon to show location on map
- About line simplified
- Front of widget shows icon for nautical/astronomical twilight when not in clock-only mode
- New about page completed
- Added licensing details everywhere
- Corrected a few latitude/longitude errors noticed in the places database
- Database lookup debugging messages suppressed for release builds
- Bumped version to 1.3.1 since all versions of 1.3.0 were betas but one escaped into the wild without the beta suffix.
- Pointed links to new project page


1.3.0b2 (Changes since 1.3.0b1) 2010-08-31

- Esc, Return, Enter work on front side now
- Extra lookups are suppressed
- Last database lookup is now cached


1.3.0b1 (Changes since 1.2.3) 2010-08-31

- Development restarted with new developer
- Works on Snow Leopard
- Esc, Return, Enter work on back side
- Back side controls no longer drag widget (which means text in city box is no mouse-selectable)
- Places database now included with widget -- no server required anymore!
- City lookups improved
- Places database dump cleaned up to be usable (was in mangled character set)
- Widget is now approximately 20MB when distributed in order to include 2 million+ place name lat/lon database
- Cleaned up some __MyCompanyName__ placeholders
- Enforce 10.4.3 requirement by adding LSMinimumSystemVersion key to helper
- New about page link added
- Old link on back of widget re-pointed into Internet Archive
- Added release dates to CHANGELOG


1.2.3 Sources Released 2008-03-12

- MIT License
- Includes Objective-C Cocoa portion
- Includes places database
- Includes Photoshop sources
- Includes PHP server script

