@@ -1,0 +1,241 @@
+/*
+   city_table.inc
+   Last Selected City lookup table
+   Copyright (C) 2010 Kyle J. McKay.  All rights reserved.
+
+   This program is free software: you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation, either version 3 of the License, or
+   (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
+{@"Abu Dhabi",@"U.A.E.",@"Abu Dhabi",@"AE"},
+{@"Accra",@"Ghana",@"Accra",@"GH"},
+{@"Adak",@"U.S.A.",@"Adak",@"US/AK"},
+{@"Addis Ababa",@"Ethiopia",@"Addis Ababa",@"ET"},
+{@"Adelaide",@"Australia",@"Adelaide",@"AU"},
+{@"Algiers",@"Algeria",@"Algiers",@"DZ"},
+{@"Amman",@"Jordan",@"Amman",@"JO"},
+{@"Amsterdam",@"Netherlands",@"Amsterdam",@"NL"},
+{@"Anadyr",@"Russia",@"Anadyr",@"RU"},
+{@"Anchorage",@"U.S.A.",@"Anchorage",@"US/AK"},
+{@"Ankara",@"Turkey",@"Ankara",@"TR"},
+{@"Antananarivo",@"Madagascar",@"Antananarivo",@"MG"},
+{@"Ashgabat",@"Turkmenistan",@"Ashgabat",@"TM"},
+{@"Asmera",@"Eritrea",@"Asmara",@"ER"},
+{@"Asuncion",@"Paraguay",@"Asuncion",@"PY"},
+{@"Athens",@"Greece",@"Athens",@"GR"},
+{@"Atlanta",@"U.S.A.",@"Atlanta",@"US/GA"},
+{@"Austin",@"U.S.A.",@"Austin",@"US/TX"},
+{@"Baghdad",@"Iraq",@"Baghdad",@"IQ"},
+{@"Baku",@"Azerbaijan",@"Baku",@"AZ"},
+{@"Bamako",@"Mali",@"Bamako",@"ML"},
+{@"Bangkok",@"Thailand",@"Bangkok",@"TH"},
+{@"Bangui",@"Central African Republic",@"Bangui",@"CF"},
+{@"Beijing",@"China",@"Beijing",@"CN"},
+{@"Beirut",@"Lebanon",@"Beirut",@"LB"},
+{@"Belgrade",@"Serbia and Montenegro",@"Belgrade",@"YU"},
+{@"Belgrade",@"Yugoslavia",@"Belgrade",@"YU"},
+{@"Berlin",@"Germany",@"Berlin",@"DE"},
+{@"Blacksburg",@"U.S.A.",@"Blacksburg",@"US/VA"},
+{@"Bogota",@"Colombia",@"Bogota",@"CO"},
+{@"Boston",@"U.S.A.",@"Boston",@"US/MA"},
+{@"Brasalia",@"BrazilBrasilia",@"BR"},
+{@"Bratislava",@"Slovakia",@"Bratislava",@"SK"},
+{@"Bridgetown",@"Barbados",@"Bridgetown",@"BB"},
+{@"Brisbane",@"Australia",@"Brisbane",@"AU"},
+{@"Brussels",@"Belgium",@"Brussels",@"BE"},
+{@"Bucharest",@"Romania",@"Bucharest",@"RO"},
+{@"Budapest",@"Hungary",@"Budapest",@"HU"},
+{@"Buenos Aires",@"Argentina",@"Buenos Aires",@"AR"},
+{@"Cairo",@"Egypt",@"Cairo",@"EG"},
+{@"Calgary",@"Canada",@"Calgary",@"CA"},
+{@"Canberra",@"Australia",@"Canberra",@"AU"},
+{@"Canton",@"China",@"Canton",@"CN"},
+{@"Cape Town",@"South Africa",@"Cape Town",@"ZA"},
+{@"Caracas",@"Venezuela",@"Caracas",@"VE"},
+{@"Cardiff",@"Wales",@"Cardiff",@"GB"},
+{@"Cayenne",@"French Guiana",@"Cayenne",@"GF"},
+{@"Chennai",@"India",@"Chennai",@"IN"},
+{@"Chicago",@"U.S.A.",@"Chicago",@"US/IL"},
+{@"Colombo",@"Sri Lanka",@"Colombo",@"LK"},
+{@"Columbus",@"U.S.A.",@"Columbus",@"US/OH"},
+{@"Conakry",@"Guinea",@"Conakry",@"GN"},
+{@"Copenhagen",@"Denmark",@"Copenhagen",@"DK"},
+{@"Cork",@"Ireland",@"Cork",@"IE"},
+{@"Cupertino",@"U.S.A.",@"Cupertino",@"US/CA"},
+{@"Dacca",@"Bangladesh"},
+{@"Dakar",@"Senegal",@"Dacca",@"BD"},
+{@"Dallas",@"U.S.A.",@"Dallas",@"US/TX"},
+{@"Damascus",@"Syria",@"Damascus",@"SY"},
+{@"Dar es Salaam",@"Tanzania",@"Dar es Salaam",@"TZ"},
+{@"Darwin",@"Australia",@"Darwin",@"AU"},
+{@"Denver",@"U.S.A.",@"Denver",@"US/CO"},
+{@"Detroit",@"U.S.A.",@"Detroit",@"US/MI"},
+{@"Dhaka",@"Bangladesh",@"Dhaka",@"BD"},
+{@"Djibouti",@"Djibouti",@"Djibouti",@"DJ"},
+{@"Doha",@"Qatar",@"Doha",@"QA"},
+{@"Douala",@"Cameroon",@"Douala",@"CM"},
+{@"Dublin",@"Ireland",@"Dublin",@"IE"},
+{@"Edinburgh",@"Scotland",@"Edinburgh",@"GB"},
+{@"Freetown",@"Sierra Leone",@"Freetown",@"SL"},
+{@"Geneva",@"Switzerland",@"Geneva",@"CH"},
+{@"Georgetown",@"Guyana",@"Georgetown",@"GY"},
+{@"Grytviken",@"South Georgia",@"Grytviken",@"GS"},
+{@"Guam",@"U.S.A.",@"Dededo",@"US/GU"},
+{@"Guatemala",@"Guatemala",@"Guatemala",@"GT"},
+{@"Halifax",@"Canada",@"Halifax",@"CA"},
+{@"Hamburg",@"Germany",@"Hamburg",@"DE"},
+{@"Hanoi",@"Vietnam",@"Hanoi",@"VN"},
+{@"Harare",@"Zimbabwe",@"Harare",@"ZW"},
+{@"Havana",@"Cuba",@"Havana",@"CU"},
+{@"Helsinki",@"Finland",@"Helsinki",@"FI"},
+{@"Hobart",@"Australia",@"Hobart",@"AU"},
+{@"Hong Kong",@"China",@"Hong Kong",@"HK"},
+{@"Honolulu",@"U.S.A.",@"Honolulu",@"US/HI"},
+{@"Houston",@"U.S.A.",@"Houston",@"US/TX"},
+{@"Indianapolis",@"U.S.A.",@"Indianapolis",@"US/IN"},
+{@"Islamabad",@"Pakistan",@"Islamabad",@"PK"},
+{@"Istanbul",@"Turkey",@"Istanbul",@"TR"},
+{@"Jakarta",@"Indonesia",@"Jakarta",@"ID"},
+{@"Jerusalem",@"Israel",@"Jerusalem",@"IL"},
+{@"Kabul",@"Afghanistan",@"Kabul",@"AF"},
+{@"Kampala",@"Uganda",@"Kampala",@"UG"},
+{@"Katmandu",@"Nepal",@"Katmandu",@"NP"},
+{@"Khartoum",@"Sudan",@"Khartoum",@"SD"},
+{@"Kiev",@"Ukraine",@"Kiev",@"UA"},
+{@"Kinshasa",@"Zaire",@"Kinshasa",@"CD"},
+{@"Knoxville",@"U.S.A.",@"Knoxville",@"US/TN"},
+{@"Kolkata",@"India",@"Kolkata",@"IN"},
+{@"Krasnoyarsk",@"Russia",@"Krasnoyarsk",@"RU"},
+{@"Kuala Lumpur",@"Malaysia",@"Kuala Lumpur",@"MY"},
+{@"Kuwait",@"Kuwait",@"Kuwait",@"KW"},
+{@"La Paz",@"Bolivia",@"La Paz",@"BO"},
+{@"Lagos",@"Nigeria",@"Lagos",@"NG"},
+{@"Lima",@"Peru",@"Lima",@"PE"},
+{@"Lisbon",@"Portugal",@"Lisbon",@"PT"},
+{@"Ljubljana",@"Slovenia",@"Ljubljana",@"SI"},
+{@"London",@"England",@"London",@"GB"},
+{@"Los Angeles",@"U.S.A.",@"Los Angeles",@"US/CA"},
+{@"Luanda",@"Angola",@"Luanda",@"AO"},
+{@"Lusaka",@"Zambia",@"Lusaka",@"ZM"},
+{@"Madrid",@"Spain",@"Madrid",@"ES"},
+{@"Magadan",@"Russia",@"Magadan",@"RU"},
+{@"Male",@"Maldives",@"Male",@"MV"},
+{@"Managua",@"Nicaragua",@"Managua",@"NI"},
+{@"Manama",@"Bahrain",@"Manama",@"BH"},
+{@"Manchester",@"U.S.A.",@"Manchester",@"US/NH"},
+{@"Manila",@"Philippines",@"Manila",@"PH"},
+{@"Maputo",@"Mozambique",@"Maputo",@"MZ"},
+{@"Mecca",@"Saudi Arabia",@"Mecca",@"SA"},
+{@"Mecca",@"Saudia Arabia",@"Mecca",@"SA"},
+{@"Melbourne",@"Australia",@"Melbourne",@"AU"},
+{@"Memphis",@"U.S.A.",@"Memphis",@"US/TN"},
+{@"Mexico City",@"Mexico",@"Mexico City",@"MX"},
+{@"Miami",@"U.S.A.",@"Miami",@"US/FL"},
+{@"Minneapolis",@"U.S.A.",@"Minneapolis",@"US/MN"},
+{@"Mogadisho",@"Somalia",@"Mogadisho",@"SO"},
+{@"Monrovia",@"Liberia",@"Monrovia",@"LR"},
+{@"Montevideo",@"Uruguay",@"Montevideo",@"UY"},
+{@"Montreal",@"Canada",@"Montreal",@"CA"},
+{@"Moscow",@"Russia",@"Moscow",@"RU"},
+{@"Mumbai",@"India",@"Mumbai",@"IN"},
+{@"Munich",@"Germany",@"Munich",@"DE"},
+{@"Muscat",@"Oman",@"Muscat",@"OM"},
+{@"Nairobi",@"Kenya",@"Nairobi",@"KE"},
+{@"Ndjamena",@"Chad",@"Ndjemena",@"TD"},
+{@"New Delhi",@"India",@"New Delhi",@"IN"},
+{@"New York",@"U.S.A.",@"New York",@"US/NY"},
+{@"Nouakchott",@"Mauritania",@"Nouakchott",@"MR"},
+{@"Noumea",@"New Caledonia",@"Noumea",@"NC"},
+{@"Novosibirsk",@"Russia",@"Novosibirsk",@"RU"},
+{@"Nuuk",@"Greenland",@"Nuuk",@"GL"},
+{@"Omsk",@"Russia",@"Omsk",@"RU"},
+{@"Osaka",@"Japan",@"Osaka",@"JP"},
+{@"Oslo",@"Norway",@"Oslo",@"NO"},
+{@"Ottawa",@"Canada",@"Ottawa",@"CA"},
+{@"Ouagadougou",@"Burkina Faso",@"Ouagadougou",@"BF"},
+{@"Ougadougou",@"Burkina Faso",@"Ouagadougou",@"BF"},
+{@"Pago Pago",@"Samoa",@"Pago Pago",@"US/AS"},
+{@"Panama",@"Panama",@"Panama",@"PA"},
+{@"Paramaribo",@"Surinam",@"Paramaribo",@"SR"},
+{@"Paris",@"France",@"Paris",@"FR"},
+{@"Perth",@"Australia",@"Perth",@"AU"},
+{@"Philadelphia",@"U.S.A.",@"Philadelphia",@"US/PA"},
+{@"Phnom Penh",@"Cambodia",@"Phnom Penh",@"KH"},
+{@"Phoenix",@"U.S.A.",@"Phoenix",@"US/AZ"},
+{@"Ponta Delgada",@"Portugal",@"Ponta Delgada",@"PT"},
+{@"Port Louis",@"Mauritius",@"Port Louis",@"MU"},
+{@"Port-au-Prince",@"Haiti",@"Port-au-Prince",@"HT"},
+{@"Portland",@"U.S.A.",@"Portland",@"US/OR"},
+{@"Prague",@"Czech Republic",@"Prague",@"CZ"},
+{@"Pyongyang",@"North Korea",@"Pyongyang",@"KP"},
+{@"Quito",@"Ecuador",@"Quito",@"EC"},
+{@"Rabat",@"Morocco",@"Rabat",@"MA"},
+{@"Rangoon",@"Burma",@"Rangoon",@"BU"},
+{@"Recife",@"Brazil",@"Recife",@"BR"},
+{@"Regina",@"Canada",@"Regina",@"CA"},
+{@"Reykjavik",@"Iceland",@"Reykjavik",@"IS"},
+{@"Rio de Janeiro",@"Brazil",@"Rio de Janeiro",@"BR"},
+{@"Riyadh",@"Saudi Arabia",@"Riyadh",@"SA"},
+{@"Riyadh",@"Saudia Arabia",@"Riyadh",@"SA"},
+{@"Roma",@"Italy",@"Roma",@"IT"},
+{@"Rome",@"Italy",@"Rome",@"IT"},
+{@"Salt Lake City",@"U.S.A.",@"Salt Lake City",@"US/UT"},
+{@"San Diego",@"U.S.A.",@"San Diego",@"US/CA"},
+{@"San Francisco",@"U.S.A.",@"San Francisco",@"US/CA"},
+{@"San Jose",@"Costa Rica",@"San Jose",@"CR"},
+{@"San Juan",@"Puerto Rico",@"San Juan",@"US/PR"},
+{@"San Salvador",@"El Salvador",@"San Salvador",@"SV"},
+{@"Sanaa",@"Yemen",@"Sanaa",@"YE"},
+{@"Santiago",@"Chile",@"Santiago",@"CL"},
+{@"Santo Domingo",@"Dominican Republic",@"Santo Domingo",@"DO"},
+{@"Sao Paulo",@"Brazil",@"Sao Paulo",@"BR"},
+{@"Seattle",@"U.S.A.",@"Seattle",@"US/WA"},
+{@"Seoul",@"Korea",@"Seoul",@"KR"},
+{@"Shanghai",@"China",@"Shanghai",@"CN"},
+{@"Singapore",@"Singapore",@"Singapore",@"SG"},
+{@"Sofia",@"Bulgaria",@"Sofia",@"BG"},
+{@"St. John's",@"Canada",@"Saint John's",@"CA"},
+{@"St. Louis",@"U.S.A.",@"Saint Louis",@"US/MO"},
+{@"St. Petersburg",@"Russia",@"Saint Petersburg",@"RU"},
+{@"Stockholm",@"Sweden",@"Stockholm",@"SE"},
+{@"Sydney",@"Australia",@"Sydney",@"AU"},
+{@"Taipei",@"",@"Taipei",@"TW"},
+{@"Taipei",@"Taiwan",@"Taipei",@"TW"},
+{@"Taipei",@"TW",@"Taipei",@"TW"},
+{@"Tashkent",@"Uzbekistan",@"Tashkent",@"UZ"},
+{@"Tegucigalpa",@"Honduras",@"Tegucigalpa",@"HN"},
+{@"Tehran",@"Iran",@"Tehran",@"IR"},
+{@"Thanh Pho Ho Chi Minh",@"Vietnam",@"Ho Chi Minh City",@"VN"},
+{@"Tientsin",@"China",@"Tientsin",@"CN"},
+{@"Tokyo",@"Japan",@"Tokyo",@"JP"},
+{@"Toronto",@"Canada",@"Toronto",@"CA"},
+{@"Tripoli",@"Libya",@"Tripoli",@"LY"},
+{@"Tunis",@"Tunisia",@"Tunis",@"TN"},
+{@"Ulaanbaatar",@"Mongolia",@"Ulaanbaatar",@"MN"},
+{@"Ulaanbaator",@"Mongolia",@"Ulaanbaator",@"MN"},
+{@"UTC",@"UTC",@"Greenwich",@"GB"},
+{@"Vancouver",@"Canada",@"Vancouver",@"CA"},
+{@"Victoria",@"Seychelles",@"Victoria",@"SC"},
+{@"Vienna",@"Austria",@"Vienna",@"AT"},
+{@"Vladivostok",@"Russia",@"Vladivostok",@"RU"},
+{@"Volgograd",@"Russia",@"Volgograd",@"RU"},
+{@"Warsaw",@"Poland",@"Warsaw",@"PL"},
+{@"Washington, D.C.",@"U.S.A.",@"Washington",@"US/DC"},
+{@"Washington",@"U.S.A.",@"Washington",@"US/DC"},
+{@"Wellington",@"New Zealand",@"Wellington",@"NZ"},
+{@"Winnipeg",@"Canada",@"Winnipeg",@"CA"},
+{@"Yakutsk",@"Russia",@"Yakutsk",@"RU"},
+{@"Yekaterinburg",@"Russia",@"Yekaterinburg",@"RU"},
+{@"Yerevan",@"Armenia",@"Yerevan",@"AM"},
+{@"Zagreb",@"Croatia",@"Zagreb",@"HR"},
+{@"Zurich",@"Switzerland",@"Zurich",@"CH"}
