@@ -1,6 +1,7 @@
 ﻿1.3.2 (Changes since 1.3.1) 2010-??-??
 
 - Better looking About page
+- Try harder to find an initial location before falling back to Cupertino
 - Fix issue #1: Map lookup now only uses validated names
 - A few score more database corrections and updates
 
